# -*- coding: utf-8; tab-width: 4; -*-
# ex: set fenc=utf-8 sts=4 ts=4 et nomod:

2016-06-04 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add aspects_log_before and aspects_log_after logging configuration
      in cloudi_core
    * Add aspects_log_before and aspects_log_after logging support in
      cloudi_service_monitoring

2016-06-03 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add dispatcher_pid_options and init_pid_options
      service configuration options to services_add and services_update
    * Add usage of the new unix domain socket functionality
      in Erlang/OTP 19.0rc2 for external service usage of the protocol local
      (default == local) to avoid using a NIF
    * Fix external service usage of protocol local
      with count_process > 1
    * Improve Erlang NIF compilation

2016-06-02 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add monkey_latency, monkey_chaos, aspects_init_after,
      aspects_request_before, aspects_request_after,
      aspects_info_before, aspects_info_after, and
      aspects_terminate_before service configuration options to
      service_updates
    * Fix service_updates usage of the service configuration options
      rate_request_max and hibernate
    * Fix service_updates usage of the service configuration options
      info_pid_uses and/or info_pid_options with an internal service that
      uses duo_mode == true
    * Fix internal service usage of rate_request_max,
      count_process_dynamic, and/or hibernate with duo_mode == true
      (so the options do not affect the dispatcher process)
    * Update varpool, reltool_util

2016-06-01 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fix dest_list_deny and dest_list_allow expansion in services_update
    * Improve Erlang term reuse in the source code
      (Thanks to Anthony Ramine spotting problems)
    * Add service configuration options rate_request_max,
      dest_refresh_start, dest_refresh_delay, hibernate, and reload