@@ -1,6 +1,11 @@
 # -*- coding: utf-8; tab-width: 4; -*-
 # ex: set fenc=utf-8 sts=4 ts=4 et nomod:
 
+2016-06-05 Michael Truog   <mjtruog [at] gmail (dot) com>
+
+    * Improve cloudi_service_api:aspect_log_f() type
+    * Add define specifically for cloudi_core_i_socket usage
+
 2016-06-04 Michael Truog   <mjtruog [at] gmail (dot) com>
 
     * Add aspects_log_before and aspects_log_after logging configuration
